--- a/react/hanist/src/App.css
+++ b/react/hanist/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+#bu * {
+  width: fit-content;
+  margin: 0 auto;
+}
+/* #bat * {
+  width: fit-content;
+  margin: 0 auto;
+} */
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
